# Fuk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: ApplicationIcon.hpp  BuildStbi.cpp  BuildVma.cpp  CMakeLists.txt  DeletionQueue.hpp  Engine.cpp  Engine.hpp  Frame.hpp  FrameData.hpp  Io.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Pipeline.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Renderable.hpp  Stbi.hpp  Types.hpp  UploadContext.hpp  VulkanBindings.hpp
data/shaders/: Simple.fs.glsl  Simple.fs.glsl.spv  Simple.vs.glsl  Simple.vs.glsl.spv
